# codecs

./: .credo.exs  .formatter.exs  .gitignore  CHANGELOG.md  LICENSE  README.md  mix.exs
.github/workflows/: ci.yml  release.yml  test_livebooks.yml
bench/: compression_bench.exs  run.exs
bench/helpers/: bench_helper.ex
config/: bench.exs  config.exs  dev.exs  livebook.exs  prod.exs  test.exs
docs/: architecture.md  codec-review.md  native_architecture.md  spatial_formats.md
guides/: benchmarking_methodology.md  choosing_compression_codec.md  codec_fundamentals.md  compression_fundamentals.md  native_architecture.md  runtime_codec_discovery.md  understanding_blosc2.md  understanding_bzip2.md  understanding_lz4.md  understanding_snappy.md  understanding_spatial_codecs.md  understanding_zstd.md
lib/: ex_codecs.ex
lib/ex_codecs/: application.ex  codec.ex  codec_registry.ex  compression.ex  error.ex  native.ex  nif.ex  spatial.ex
lib/ex_codecs/compression/: blosc2.ex  bzip2.ex  lz4.ex  snappy.ex  zstd.ex
lib/ex_codecs/spatial/: accel.ex  bounds.ex  gaussian.ex  gaussian_cloud.ex  metadata.ex  point.ex  point_cloud.ex  stream.ex  transform.ex
livebooks/: 01_introduction.livemd  02_compression_fundamentals.livemd  03_codec_comparison.livemd  04_building_storage_systems.livemd  05_zarr_style_workloads.livemd  06_spatial_codecs.livemd
native/ex_codecs_native/: Cargo.toml
native/ex_codecs_native/.cargo/: config.toml
native/ex_codecs_native/src/: atoms.rs  blosc2_codec.rs  bzip2_codec.rs  lib.rs  lz4_codec.rs  snappy_codec.rs  spatial.rs  util.rs  zstd_codec.rs
priv/examples/spatial/: cube_corners.ply  two_gaussians.ply
test/: ex_codecs_test.exs  test_helper.exs
test/ex_codecs/: application_test.exs  codec_registry_test.exs  codec_test.exs  compression_test.exs  concurrent_test.exs  coverage_boost_test.exs  documentation_test.exs  error_test.exs  nif_test.exs  property_expansion_test.exs  property_test.exs  spatial_test.exs
test/fixtures/: README.md
(+29 files in other folders)
