[package]
name = "ex_codecs_native"
version = "0.1.0"
authors = ["ExCodecs Team"]
edition = "2021"
rust-version = "1.85"

[lib]
name = "ex_codecs_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.36", default-features = false, features = ["derive"] }
zstd = "0.13"
lz4_flex = "0.11"
snap = "1.1"
bzip2 = "0.4"

[features]
default = ["nif_version_2_17"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true