[package]
name = "ex_codecs_native"
version = "0.2.0"
authors = ["ExCodecs Team"]
edition = "2021"
rust-version = "1.92"

[lib]
name = "ex_codecs_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.36", default-features = false, features = ["derive"] }
# Pure-Rust codecs only — no C compression toolchain (no cmake/c-blosc2).
structured-zstd = "0.0.48"
lz4_flex = "0.11"
snap = "1.1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# bzip2 0.6 defaults to pure-Rust libbz2-rs-sys (no C libbzip2).
bzip2 = "0.6"
# Official Blosc2 chunk format (BloscLZ, LZ4, LZ4HC, Zlib, Zstd + filters).
blosc2-pure-rs = { version = "0.2.4", default-features = false, features = ["zlib-rs"] }

[features]
default = ["nif_version_2_17"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
